--- a/PyFrame/PyFrameAPI/templates/PyFrameAPI/index.html
+++ b/PyFrame/PyFrameAPI/templates/PyFrameAPI/index.html
@@ -1,17 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link href="{% static 'style.css' %}" rel="stylesheet">
     <script src="{% static 'script.js' %}"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>PyFrame</title>
+    <title>PyFram</title>
 </head>
 <body>
-    <h1>PyFrame</h1>
+    <h1>PyFram</h1>
     <div class="Field">
         <input type="text" id="input" placeholder="Insert expression">
         <button class="Button" onclick="request()">Run</button>
