fix: Fix style.css

--- a/PyFrame/static/style.css
+++ b/PyFrame/static/style.css
@@ -68,7 +68,7 @@ h1:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 40px;
+    font-size: 40vw;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
