fix: Python naming convention and style.css

--- a/PyFrame/static/style.css
+++ b/PyFrame/static/style.css
@@ -68,7 +68,8 @@ h1:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 40vw;
+    font-size: 1vw;
+    text-align: center;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
